feat: data from external source

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 NODE_PATH=./
+# PUBLIC_URL=
+REACT_APP_NAME=React App
+
+# Examples
+# REACT_APP_API_ENDPOINT=http://localhost:8888/api/
+# REACT_APP_API_PATH_MATCH=people/football
+
+# REACT_APP_IMG_LOGO=/cdn/globo.png
+# REACT_APP_TITLE=Backstage Squads
