--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "clientside-proto",
+    "name": "football-squads-3d",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
